# CorrectBracketsSequenceChecker

./: CMakeLists.txt  README.md  main.cpp
BracketsLibrary/: Bracket.cpp  Bracket.hpp  BracketParser.cpp  BracketParser.hpp  BracketsSequence.cpp  BracketsSequence.hpp  CMakeLists.txt
ContainersLibrary/: CMakeLists.txt
ContainersLibrary/Stack/: Stack.cpp  Stack.hpp
ContainersLibrary/Utils/: Utils.hpp
